fix padding on mobile view

--- a/src/Site/Site.Client/Components/TerminalChat.razor.css
+++ b/src/Site/Site.Client/Components/TerminalChat.razor.css
@@ -4,5 +4,4 @@
     flex-direction: column;
     gap: 0.5em;
     padding: 0.5em;
-    padding-bottom: 4rem;
 }
